WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278951
PLT gets stuck in a nytimes article when enabling site isolation
https://bugs.webkit.org/show_bug.cgi?id=278951
Summary
PLT gets stuck in a nytimes article when enabling site isolation
Ryosuke Niwa
Reported
2024-08-30 17:11:58 PDT
PLT gets stuck in a nytimes.com article when enabling site isolation.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-08-30 17:19:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32971
EWS
Comment 2
2024-09-03 10:56:32 PDT
Committed
283102@main
(b9869b6f236b): <
https://commits.webkit.org/283102@main
> Reviewed commits have been landed. Closing PR #32971 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-03 10:57:16 PDT
<
rdar://problem/135209914
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug